Added ordered and unordered lists to the webpage

--- a/recipes/Lasagna.html
+++ b/recipes/Lasagna.html
@@ -12,4 +12,23 @@
     <img src="./World's Best Lasagna Recipe (with Video)_files/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.jpg">
    <h2>Description</h2>
    <p>This slow cooker lasagna recipe is a simple and hands-off way to enjoy classic lasagna. It layers seasoned ground beef, tomato sauce, mozzarella, cottage cheese, Parmesan, and uncooked lasagna noodles directly in the slow cooker. After 4-6 hours on low, it becomes a flavorful, tender lasagna perfect for serving a crowd.</p>
+   <p><h2>How to Make Lasagna Step-By-Step</h2></p>
+   <ol>
+    <li>Make the meat sauce.</li>
+    <li>Cook the noodles.</li>
+    <li>Make the ricotta mixture.</li>
+    <li>Layer the lasagna according to the recipe instructions.</li>
+    <li>Cover with foil and bake.</li>
+    <li>Let the lasagna rest before serving.</li>
+   </ol>
+   <p></p><h2>How to layer Lasagna</h2></p>
+   <ul>
+   <li>Meat sauce</li>
+   <li>Noodle</li>
+   <li>Ricotta mixture</li>
+   <li>Mozzarella slices</li>
+   <li>Meat sauce</li>
+   <li>Parmesan cheese</li>
+   <li>Repeat the layers, then top with the remaining Parmesan.</li>
+  </ul>
   </body>
